@startuml

title __PROYECTOFINAL's Class Diagram__\n

  namespace alu0101361093.proyectofinal.controller {
    class alu0101361093.proyectofinal.controller.Controller {
    }
  }


  namespace alu0101361093.proyectofinal.gui {
    class alu0101361093.proyectofinal.gui.BalancedScoreboard {
    }
  }


  namespace alu0101361093.proyectofinal.model {
    interface alu0101361093.proyectofinal.model.TwitterAPIModel {
    }
  }


  namespace alu0101361093.proyectofinal.model {
    class alu0101361093.proyectofinal.model.TwitterAPIModelImpl {
    }
  }


  namespace alu0101361093.proyectofinal.twitter {
    class alu0101361093.proyectofinal.twitter.TwitterAPIQueries {
    }
  }



  namespace alu0101361093.proyectofinal.view {
    class alu0101361093.proyectofinal.view.TwitterBarChart {
    }
  }


  namespace alu0101361093.proyectofinal.view {
    class alu0101361093.proyectofinal.view.TwitterHistogram {
    }
  }


  namespace alu0101361093.proyectofinal.view {
    class alu0101361093.proyectofinal.view.TwitterPieChart {
    }
  }


  namespace alu0101361093.proyectofinal.view {
    class alu0101361093.proyectofinal.view.TwitterTimeSeries {
    }
  }


  namespace alu0101361093.proyectofinal.view {
    interface alu0101361093.proyectofinal.view.TwitterView {
    }
  }

  alu0101361093.proyectofinal.controller.Controller o-- alu0101361093.proyectofinal.model.TwitterAPIModel : model
  alu0101361093.proyectofinal.gui.BalancedScoreboard -up-|> javax.swing.JFrame
  alu0101361093.proyectofinal.gui.BalancedScoreboard o-- alu0101361093.proyectofinal.view.TwitterView : view1
  alu0101361093.proyectofinal.gui.BalancedScoreboard o-- alu0101361093.proyectofinal.view.TwitterView : view2
  alu0101361093.proyectofinal.gui.BalancedScoreboard o-- alu0101361093.proyectofinal.view.TwitterView : view3
  alu0101361093.proyectofinal.gui.BalancedScoreboard o-- alu0101361093.proyectofinal.view.TwitterView : view4
  alu0101361093.proyectofinal.gui.BalancedScoreboard o-- alu0101361093.proyectofinal.controller.Controller : controller
  alu0101361093.proyectofinal.model.TwitterAPIModelImpl .up.|> alu0101361093.proyectofinal.model.TwitterAPIModel
  alu0101361093.proyectofinal.twitterdatasetcreator.BarChartDatasetCreator .up.|> alu0101361093.proyectofinal.twitterdatasetcreator.TwitterDatasetCreator
  alu0101361093.proyectofinal.twitterdatasetcreator.PieChartDatasetCreator .up.|> alu0101361093.proyectofinal.twitterdatasetcreator.TwitterDatasetCreator
  alu0101361093.proyectofinal.twitterdatasetcreator.TwitterHistogramDatasetCreator .up.|> alu0101361093.proyectofinal.twitterdatasetcreator.TwitterDatasetCreator
  alu0101361093.proyectofinal.twitterdatasetcreator.TwitterTimeSeriesDatasetCreator .up.|> alu0101361093.proyectofinal.twitterdatasetcreator.TwitterDatasetCreator
  alu0101361093.proyectofinal.view.TwitterBarChart .up.|> alu0101361093.proyectofinal.view.TwitterView
  alu0101361093.proyectofinal.view.TwitterBarChart o-- alu0101361093.proyectofinal.twitterdatasetcreator.TwitterDatasetCreator : datasetCreator
  alu0101361093.proyectofinal.view.TwitterHistogram .up.|> alu0101361093.proyectofinal.view.TwitterView
  alu0101361093.proyectofinal.view.TwitterHistogram o-- alu0101361093.proyectofinal.twitterdatasetcreator.TwitterDatasetCreator : datasetCreator
  alu0101361093.proyectofinal.view.TwitterPieChart .up.|> alu0101361093.proyectofinal.view.TwitterView
  alu0101361093.proyectofinal.view.TwitterPieChart o-- alu0101361093.proyectofinal.twitterdatasetcreator.TwitterDatasetCreator : datasetCreator
  alu0101361093.proyectofinal.view.TwitterTimeSeries .up.|> alu0101361093.proyectofinal.view.TwitterView
  alu0101361093.proyectofinal.view.TwitterTimeSeries o-- alu0101361093.proyectofinal.twitterdatasetcreator.TwitterDatasetCreator : datasetCreator



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml